完成了WHST　WE　Do　模块代码的编写(但未解决banner模块的代码)

--- a/index.html
+++ b/index.html
@@ -43,12 +43,66 @@
     <!-- 头部区域 } -->
 
     <!-- banner 区域 { -->
-    <main>
+    <main class="clearfix">
         <section class="banner_wrap">
-            
+            <figure>
+                <img src="./src/assets/images/headset_01.png" alt="图片记载失败...">
+            </figure>
+            <div class="banner_right">
+                <p>TOPCRESTA & V SOLUTION THE BEST FOR YOU!</p>
+                <h4>只为您提供卓越</h4>
+                <div class="banner_right_btn">
+                    <ul>
+                        <li class="btn_1"><a href="javascript:;">点击购买</a></li>
+                        <li class="btn_2"><a href="javascript:;">了解更过</a></li>
+                    </ul>
+                </div>
+            </div>
+            <article>
+                <h4>关于我们</h4>
+                <p>
+                    敦冠影音，在家庭影院定制设计安装，影院音视频设计领域处于行业领先地位的公司，致力于引进国际先进家庭影院，杜比全景声影院，视听娱
+                </p>
+                <figure>
+                    <img src="./src/assets/images/headset_02.png" alt="图片记载失败...">
+                </figure>
+            </article>
         </section>
     </main>
     <!-- banner 区域 } -->
+
+    <!-- What we Do? 区域 { -->
+    <section class="introduction">
+        <div class="introduction_title">
+            WHAT WE DO
+            <p>我们能做什么</p>
+        </div>
+        <ul class="introduction_lis">
+            <li class="install">
+                <img src="./src/assets/images/install.png" alt="">
+                <span>免费安装</span>
+                <p>
+                    敦冠影音，在家庭影院定制为用户 提供免费安装安装，为您的生 活提供便捷方便的服务。
+                </p>
+            </li>
+            <li class="customization">
+                <img src="./src/assets/images/customization.png" alt="">
+                <span>定制设计 </span>
+                <p>
+                    敦冠影音，在家庭影院为用户推出 定制设计服务，让您的生活 变得更加丰富个性。
+                </p>
+            </li>
+            <li class="service">
+                <img src="./src/assets/images/service.png" alt="">
+                <span>售后保障</span>
+                <p>
+                    敦冠影音，在家庭影院为用户提供 安全放心的售后保障服务， 让你无后顾之忧
+                </p>
+            </li>
+        </ul>
+    </section>
+
+    <!-- What to Do? 区域 } -->
 
     <!-- 最新资讯区域 { -->
     <section class="news_wrap"></section>
