完成最新资讯模块代码的编写

--- a/index.html
+++ b/index.html
@@ -105,7 +105,55 @@
     <!-- What to Do? 区域 } -->
 
     <!-- 最新资讯区域 { -->
-    <section class="news_wrap"></section>
+    <section class="news_wrap">
+        <div class="news_title">
+            最新资讯 <span>NEW</span>
+        </div>
+        <ul class="news_lis">
+            <li>
+                <img src="./src/assets/images/total.jpg" alt="">
+                <a href="##">
+                    [音视频工程]敦冠科技独家承建中兴通讯公司工厂宴会厅音视频系统.
+                    <span>[2015-10-12]</span>
+                </a>
+            </li>
+            <li>
+                <img src="./src/assets/images/total.jpg" alt="">
+                <a href="##">
+                    [家庭影院]现代格调私人家庭影院配置方案报 价.
+                    <span>[2015-10-12]</span>
+                </a>
+            </li>
+            <li>
+                <img src="./src/assets/images/total.jpg" alt="">
+                <a href="##">
+                    Community携手RunningMan创体育馆音频系 统新里程
+                    <span>[2015-10-12]</span>
+                </a>
+            </li>
+            <li>
+                <img src="./src/assets/images/total.jpg" alt="">
+                <a href="##">
+                    [家庭影院]五星级的合同，五星级的影院
+                    <span>[2015-10-12]</span>
+                </a>
+            </li>
+            <li>
+                <img src="./src/assets/images/total.jpg" alt="">
+                <a href="##">
+                    [音视频工程]敦冠科技独家承建中兴通讯公司工厂宴会厅音视频系统.
+                    <span>[2015-10-12]</span>
+                </a>
+            </li>
+            <li>
+                <img src="./src/assets/images/total.jpg" alt="">
+                <a href="##">
+                    Community携手RunningMan创体育馆音频系 统新里程
+                    <span>[2015-10-12]</span>
+                </a>
+            </li>
+        </ul>
+    </section>
     <!-- 最新资讯区域 } -->
 
     <!-- 产品与科技区域 { -->
