完成轮播图静态页面的编写(但留下一个bug没有解决，就是使用定位的方式进行布局，到了移动端，布局就已经混乱了, 待解决)

--- a/index.html
+++ b/index.html
@@ -156,8 +156,21 @@
     </section>
     <!-- 最新资讯区域 } -->
 
-    <!-- 产品与科技区域 { -->
-    <section class="swriper_wrap"></section>
+    <!-- 产品与科技区域 轮播图 { -->
+    <section class="swiper_wrap">
+        <h5 class="swiper_title">
+            产品与科技
+        </h5>
+        <ul class="picture_container clearfix">
+            <li></li>
+            <li></li>
+            <li></li>
+            <div class="btn_wrap">
+                <div class="pre"></div>
+                <div class="next"></div>
+            </div>
+        </ul>
+    </section>
     <!-- 产品与科技区域 } -->
 
     <!-- 页面底部区域 {-->
