完成的底部版权部分的代码，剩下底部的反馈未编写

--- a/index.html
+++ b/index.html
@@ -174,7 +174,13 @@
     <!-- 产品与科技区域 } -->
 
     <!-- 页面底部区域 {-->
-    <footer class="foot_wrap"></footer>
+    <footer class="foot_wrap">
+        <div class="feedback_wrap"></div>
+        <div class="copyright_wrap">
+            <p>深圳市敦冠科技有限公司 Shenzhen Topcrest Technology Co.,Ltd</p>
+            <p>Shenzhen Topcrest Technology Co.,Ltd .All Rights Reserved / Powered By Ciya Interactive 粤ICP备09077069号-2</p>
+        </div>
+    </footer>
     <!-- 页面底部区域 }-->
 </body>
 
