完成底部用户反馈模块代码编写

--- a/index.html
+++ b/index.html
@@ -175,10 +175,47 @@
 
     <!-- 页面底部区域 {-->
     <footer class="foot_wrap">
-        <div class="feedback_wrap"></div>
+        <div class="feedback_wrap">
+            <!-- 联系方式 -->
+            <div class="feedback_left">
+                <!-- 二维码 -->
+                <figure class="qrC_img">
+                    <img src="./src/assets/images/qr_img.jpg" alt="二维码加载失败...">
+                    <figcaption>扫描二维码了解更多内容</figcaption>
+                </figure>
+                <!-- 联系方式 -->
+                <div class="qrC_content">
+                    <h5>联系方式:</h5>
+                    <p>
+                        <i class="icon icon_phone"></i>0755-25023651 0755-25023653
+                    </p>
+                    <p>0755-25023658 0755-25023659</p>
+                    <p><i class="icon icon_email"></i>12311231@qq.com</p>
+                    <p><i class="icon icon_seat"></i>深圳市深南中路绿景广场(NEO企业大道)B栋32F</p>
+                </div>
+            </div>
+            <!-- 用户反馈 -->
+            <div class="feedback_right">
+                <div class="contact_title">用户反馈:</div>
+                <form action="#">
+                    <div class="user_info">
+                        <input type="text" value="你的名字">
+                        <input type="email" value="你的电子邮箱">
+                    </div>
+                    <div class="caption">
+                        <input type="text" value="请输入一个标题">
+                    </div>
+                    <textarea name="content" id="t_area">请输入你要留言的内容</textarea>
+                    <div class="btn">
+                        <a href="javascript:;">留言</a>
+                    </div>
+                </form>
+            </div>
+        </div>
         <div class="copyright_wrap">
             <p>深圳市敦冠科技有限公司 Shenzhen Topcrest Technology Co.,Ltd</p>
-            <p>Shenzhen Topcrest Technology Co.,Ltd .All Rights Reserved / Powered By Ciya Interactive 粤ICP备09077069号-2</p>
+            <p>Shenzhen Topcrest Technology Co.,Ltd .All Rights Reserved / Powered By Ciya Interactive 粤ICP备09077069号-2
+            </p>
         </div>
     </footer>
     <!-- 页面底部区域 }-->
