解决了banner区域的问题，并将完成了代码部分的编写(监听的方式不对)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>敦冠科技</title>
-    <link rel="stylesheet" href="./src/styles/css/index.css">
+    <link rel="stylesheet" href="./src/css/index.css">
 </head>
 
 <body>
@@ -43,8 +43,8 @@
     <!-- 头部区域 } -->
 
     <!-- banner 区域 { -->
-    <main class="clearfix">
-        <section class="banner_wrap">
+    <main class="">
+        <section class="banner_wrap clearfix">
             <figure>
                 <img src="./src/assets/images/headset_01.png" alt="图片记载失败...">
             </figure>
@@ -52,21 +52,24 @@
                 <p>TOPCRESTA & V SOLUTION THE BEST FOR YOU!</p>
                 <h4>只为您提供卓越</h4>
                 <div class="banner_right_btn">
-                    <ul>
-                        <li class="btn_1"><a href="javascript:;">点击购买</a></li>
-                        <li class="btn_2"><a href="javascript:;">了解更过</a></li>
-                    </ul>
+                    <a class="btn_1" href="javascript:;">点击购买</a>
+                    <a class="btn_2" href="javascript:;">了解更过</a>
                 </div>
             </div>
-            <article>
+        </section>
+        <section class="about_wrap clearfix">
+            <div class="about_content">
                 <h4>关于我们</h4>
                 <p>
                     敦冠影音，在家庭影院定制设计安装，影院音视频设计领域处于行业领先地位的公司，致力于引进国际先进家庭影院，杜比全景声影院，视听娱
+                    敦冠影音，在家庭影院定制设计安装，影院音视频设计领域处于行业领先地位的公司，致力于引进国际先进家庭影院，杜比全景声影院，视听娱
+                    敦冠影音，在家庭影院定制设计安装，影院音视频设计领域处于行业领先地位的公司，致力于引进国际先进家庭影院，杜比全景声影院，视听娱
+                    敦冠影音，在家庭影院定制设计安装，影院音视频设计领域处于行业领先地位的公司，致力于引进国际先进家庭影院，杜比全景声影院，视听娱
                 </p>
-                <figure>
-                    <img src="./src/assets/images/headset_02.png" alt="图片记载失败...">
-                </figure>
-            </article>
+            </div>
+            <figure>
+                <img src="./src/assets/images/headset_02.png" alt="图片记载失败...">
+            </figure>
         </section>
     </main>
     <!-- banner 区域 } -->
