删除了最新资讯中的a标签的hover效果

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>敦冠科技</title>
     <link rel="stylesheet" href="./src/css/index.css">
+    <!-- 引用线上字体图标库 -->
+    <!-- <link rel="stylesheet" href="//at.alicdn.com/t/font_1125854_1t603h4d6e6.css"> -->
 </head>
 
 <body>
@@ -61,10 +63,7 @@
             <div class="about_content">
                 <h4>关于我们</h4>
                 <p>
-                    敦冠影音，在家庭影院定制设计安装，影院音视频设计领域处于行业领先地位的公司，致力于引进国际先进家庭影院，杜比全景声影院，视听娱
-                    敦冠影音，在家庭影院定制设计安装，影院音视频设计领域处于行业领先地位的公司，致力于引进国际先进家庭影院，杜比全景声影院，视听娱
-                    敦冠影音，在家庭影院定制设计安装，影院音视频设计领域处于行业领先地位的公司，致力于引进国际先进家庭影院，杜比全景声影院，视听娱
-                    敦冠影音，在家庭影院定制设计安装，影院音视频设计领域处于行业领先地位的公司，致力于引进国际先进家庭影院，杜比全景声影院，视听娱
+                    敦冠影音，在家庭影院定制设计安装，影院音视频设计领域处于行业领先地位的公司，致力于引进国际先进家庭影院，杜比全景声影院，视听娱乐系统，推广世界知名音响产品，提供只能，舒适，全面，安全的全宅音视频影院集成方案。凭借超过十年的从业经验，已经成为一家集家庭影院音响品牌代理，影音设备资讯设计，工程安装，项目监管为一体的规模化企业。我司为众多高档别墅，高端会所，星级酒店等场所，从多角度全方面、定制设计出的只能影院音频系统，获得业界内及客户极高的赞誉。我们专注于为客户提供全方位的，即时的，真诚的售后服务。
                 </p>
             </div>
             <figure>
