--- a/test.html
+++ b/test.html
@@ -12,7 +12,13 @@
       width: 100%;
       height: 100%;
     }
+
+    body {
+      margin: 500px;
+    }
+
     .box {
+      margin-bottom: 60px;
       width: 100%;
       height: 100%;
       background-color: gainsboro;
@@ -39,6 +45,35 @@
     <div class="innerBox"></div>
     <div class="son"></div>
   </div>
+
+  <style>
+    .container {
+      position: relative;
+      width: 100px;
+      height: 50px;
+      background-color: aqua;
+    }
+
+    .container:before,
+    .container:after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 0;
+      border: 50px solid transparent;
+    }
+
+    .container:before {
+      bottom: -100px;
+      border-top-color: aqua;
+    }
+
+    .container:after {
+      top: -100px;
+      border-bottom-color: aqua;
+    }
+  </style>
+  <div class="container"></div>
 </body>
 
 </html>
